# enterprise-ai-gateway

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  WARP.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  working.md
.github/workflows/: ci-cd.yml  portfolio-pages.yml
app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py  models.py
app/middleware/: __init__.py  logging.py  security.py
app/routers/: __init__.py  v1.py
configs/: dev.yaml  prod.yaml  test.yaml
deploy/helm/enterprise-ai-gateway/: Chart.yaml  values-prod.yaml  values-staging.yaml  values.yaml
deploy/helm/enterprise-ai-gateway/templates/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secrets.yaml  service.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secrets.yaml  service.yaml
deploy/terraform/: main.tf  variables.tf
docs/: api.md  index.md  script.js  site.config.json  styles.css
portfolio/: index.html  script.js  styles.css
scripts/: export_openapi.py  pip_audit_gate.py  run_checks.py  smoke_test.py
services/: __init__.py  caching_service.py  chat_service.py  llm_service.py  monitoring_service.py  plugin_service.py  security_service.py  vector_service.py
tests/e2e/: test_basic.py
tests/integration/: test_basic.py
tests/unit/: test_health.py  test_search.py  test_security.py  test_status.py
